Replace the Label at the top of each template with a Text control in an HBox, which is necessary for centring on Linux, where some of the dialogue boxes are wider than on Windows! This seems to avoid truncated text reliably and portably. Name this version V1.31, purely for my own record.

--- a/src/fjwright/runreduce/templates/templates.css
+++ b/src/fjwright/runreduce/templates/templates.css
@@ -15,7 +15,7 @@
     -fx-font-size: 15px;
 }
 .bracket {
-    -fx-font-size: 120px;
+    -fx-font-size: 130px;
     -fx-translate-y: -10;
 }
 
